# Worker-Bee

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_TO_BOLT.md  Dockerfile  LICENSE.md  Procfile  README.md  backend_server.py  bolt.config.js  conftest.py  debug_test.py  deploy.md  experiments.ipynb  graph.py  llm_clients.py  netlify.toml  package-lock.json  package.json  prompts.py  pyproject.toml  pytest.ini  quick_linux_setup.sh  quick_test.py  requirements-netlify.txt  requirements.txt  setup_playwright.py  start_production.py  start_ui.py  stream_debug_test.py  test_basic_automation.py  test_pollinations_integration.py  utils.py  vercel.json
browser/: __init__.py
browser/browser/: browser.py  context.py  downloads.py  views.py
browser/dom/: buildDomTree.js  service.py  views.py
browser/dom/history_tree_processor/: service.py
browser/telemetry/: views.py
browser/tools/: browser_tools.py  ops_tools.py
netlify/functions/: analyze.py  health.py
openoperator/: __init__.py  main.py
openoperator-ui/: index.html  package-lock.json  package.json  vite.config.js
openoperator-ui/src/: App.css  App.jsx  index.css
openoperator/agent/: graph.py  llm_clients.py  pollinations_llm.py
openoperator/agent/prompts/: generalist_agent.py  search_agent.py
openoperator/browser/: browser.py  context.py  views.py
openoperator/browser/dom/: buildDomTree.js  service.py  views.py
openoperator/browser/dom/history_tree_processor/: service.py
openoperator/examples/: pollinations_integration_example.py
openoperator/tools/: __init__.py  browser_tools.py  examples.py  ops_tools.py
openoperator/tools/pollinations/: README.md  __init__.py  text_tool.py  vision_tool.py
openoperator/utils/: pollinations_helpers.py  vision_queries.py
src/: __init__.py  main.py
src/agent/: graph.py  llm_clients.py
src/agent/prompts/: templates.py
src/browser/: browser.py  context.py  views.py
src/browser/dom/: service.py  views.py
src/browser/dom/history_tree_processor/: service.py
src/tools/: browser_tools.py
