[project]
name = "openoperator"
description = "Making LangGraph AI agents handle complex tasks in the browser. Forked from Browser-Use"
authors = [
    { name = "Gregor Zunic" },
    { name = "Nikita Shirobokov" }
]
version = "0.1.26"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "playwright>=1.49.0",
    "pillow>=11.1.0",
    "langchain>=0.3.15",
    "langgraph>=0.2.66",
    "langchain-openai>=0.3.1",
    "pymupdf>=1.25.2",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "hatch>=1.13.0",
    "build>=1.2.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "setuptools>=75.8.0"
]

[tool.ruff]
line-length = 130
select = ["E", "F", "I"]
fix = true

[tool.ruff.format]
quote-style = 'single'
indent-style = 'tab'
docstring-code-format = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[project.urls]
"Homepage" = "https://github.com/NickSherrow/openoperator"
"Original Repository" = "https://github.com/browser-use/browser-use/"
